[gd_scene format=3 uid="uid://do0h37hr4gm0r"]

[ext_resource type="Script" uid="uid://bjwvgf6syl2g7" path="res://ui/options_menu.gd" id="1_aa3db"]
[ext_resource type="FontFile" uid="uid://d20j4lrf88dsi" path="res://fonts/Cute Dino.ttf" id="1_ibk6l"]

[node name="OptionsMenu" type="MarginContainer" unique_id=1475999769 node_paths=PackedStringArray("label")]
size_flags_vertical = 3
theme_override_constants/margin_left = 600
theme_override_constants/margin_right = 600
theme_override_constants/margin_bottom = 100
script = ExtResource("1_aa3db")
label = NodePath("Panel/VBoxContainer/MarginContainer3/Label")

[node name="Panel" type="Panel" parent="." unique_id=168110823]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel" unique_id=1933545598]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer" unique_id=2109102883]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/MarginContainer2" unique_id=1596266262]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer2/Panel" unique_id=1216769086]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = -22.5
offset_right = 290.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ibk6l")
theme_override_font_sizes/font_size = 40
text = "VOLUME SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer" unique_id=1384985699]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer3" unique_id=486664423]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ibk6l")
theme_override_font_sizes/font_size = 20
text = "The current volume is {}."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/MarginContainer3" unique_id=2128151675]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer" unique_id=566533711]
layout_mode = 2
size_flags_vertical = 3

[node name="DecreaseVolumeButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer" unique_id=934894236]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_ibk6l")
theme_override_font_sizes/font_size = 25
text = "DECREASE VOLUME"

[node name="IncreaseVolumeButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer" unique_id=1207974929]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_ibk6l")
theme_override_font_sizes/font_size = 25
text = "INCREASE VOLUME"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer" unique_id=1333604158]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="BackButton" type="Button" parent="Panel/VBoxContainer/MarginContainer" unique_id=772668273]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ibk6l")
theme_override_font_sizes/font_size = 30
text = "BACK"

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/DecreaseVolumeButton" to="." method="_on_decrease_volume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/IncreaseVolumeButton" to="." method="_on_increase_volume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
